# regex

./: Cargo.toml  README.md
examples/: match.rs  nfa-to-dfa.rs  regex-to-fsa.rs
src/: fsa.rs  lib.rs  parse.rs
