[package]
name = "regex"
version = "0.0.0"
description = "A from-scratch regular expression engine"
repository = "https://github.com/kdkasad/regex"
authors = ["Kian Kasad <kian@kasad.com>"]
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
log = "0.4.28"

[dev-dependencies]
env_logger = "0.11.8"
paste = "1.0.15"
